Fixed the body stretching over the limit

--- a/styles.css
+++ b/styles.css
@@ -212,16 +212,27 @@ main {
   }
 
   ul {
-    margin-left: 110px;
+    margin-left: 90px;
     text-align: center;
     justify-content: center;
-    gap: 35px;
+    gap: 30px;
+  }
+
+  .buttons {
+    margin: 40px 0;
+    margin-left: 60px;
+  }
+
+  /*MAIN*/
+
+  main {
+    margin-left: -10px;
   }
 
   /*BURGER IMG*/
 
   .burger-section {
-    width: 405px;
+    width: 395px;
     height: 100px;
     margin-right: 0;
     margin-top: 0;
